--- a/index.html
+++ b/index.html
@@ -6,59 +6,8 @@
   <title>Prasad Bhoite | Cloud & DevOps Engineer</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <style>
-    /* Smooth scroll */
-    html { scroll-behavior: smooth; }
-
-    /* Sticky right-side nav */
-    .side-nav {
-      position: fixed;
-      top: 50%;
-      transform: translateY(-50%);
-      right: 0;
-      background: rgba(0,0,0,0.6);
-      padding: 10px 5px;
-      border-radius: 8px 0 0 8px;
-      z-index: 1000;
-    }
-    .side-nav ul { list-style: none; margin: 0; padding: 0; }
-    .side-nav ul li { margin: 10px 0; }
-    .side-nav ul li a {
-      color: gold;
-      text-decoration: none;
-      font-weight: 600;
-      padding: 8px 12px;
-      display: block;
-      transition: all 0.3s;
-    }
-    .side-nav ul li a:hover {
-      background: gold;
-      color: black;
-      border-radius: 5px;
-      transform: scale(1.1);
-    }
-
-    /* Enhanced hero button */
-    .btn-hero {
-      background: linear-gradient(90deg, gold, #ffb700);
-      padding: 15px 30px;
-      font-size: 18px;
-      border-radius: 50px;
-      box-shadow: 0 8px 15px rgba(0,0,0,0.3);
-      transition: 0.3s;
-      color: black;
-      font-weight: 600;
-      text-decoration: none;
-    }
-    .btn-hero:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 12px 20px rgba(0,0,0,0.4);
-    }
-
-    /* Fade-in animation */
-    .fade-in { opacity: 0; transform: translateY(20px); transition: all 0.8s ease-in-out; }
-    .fade-in.visible { opacity: 1; transform: translateY(0); }
-  </style>
+  <!-- ✅ Added Font Awesome CDN -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
   <!-- ===== Header Section ===== -->
@@ -72,8 +21,8 @@
     </div>
   </header>
 
-  <!-- ===== Right Side Vertical Navigation Bar ===== -->
-  <nav class="side-nav">
+  <!-- ===== Top Right Horizontal Navigation Bar ===== -->
+  <nav class="top-nav">
     <ul>
       <li><a href="#about">About Me</a></li>
       <li><a href="#education">Education</a></li>
@@ -132,64 +81,21 @@
     <a href="resume.pdf" class="btn" target="_blank">Download Resume</a>
   </section>
 
- <!-- ===== Contact Section ===== -->
-<!-- MODERN CONTACT ICONS SECTION -->
-<section id="contact-links" style="background-color:black; padding:60px 20px; text-align:center; border-radius:20px; margin-top:40px;">
+  <!-- ===== Connect Section (Icons Added) ===== -->
+  <section id="contact-links" style="background-color:black; padding:60px 20px; text-align:center; border-radius:20px; margin-top:40px;">
+    <h2 style="color:gold; font-size:32px; margin-bottom:25px;">✨ Connect with Me</h2>
+    <p style="color:gold; font-size:18px; margin-bottom:40px;">Tap an icon below to connect instantly!</p>
 
-  <h2 style="color:gold; font-size:32px; margin-bottom:25px;">✨ Connect with Me</h2>
-  <p style="color:gold; font-size:18px; margin-bottom:40px;">Tap an icon below to connect instantly!</p>
+    <div class="icons-container" style="display:flex; justify-content:center; gap:35px; flex-wrap:wrap;">
+      <a href="tel:+919359070217" class="icon-btn" title="Call Me"><i class="fa-solid fa-phone"></i></a>
+      <a href="mailto:prasadsb2002@gmail.com" class="icon-btn" title="Email Me"><i class="fa-solid fa-envelope"></i></a>
+      <a href="https://linkedin.com/in/prasad-bhoite-a38a64223" target="_blank" class="icon-btn" title="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
+      <a href="https://github.com/Prasad-Bhoite19" target="_blank" class="icon-btn" title="GitHub"><i class="fa-brands fa-github"></i></a>
+      <a href="https://prasad-bhoite19.github.io/prasad-portfolio/" target="_blank" class="icon-btn" title="Portfolio"><i class="fa-solid fa-globe"></i></a>
+    </div>
+  </section>
 
-  <div class="icons-container" style="display:flex; justify-content:center; gap:35px; flex-wrap:wrap;">
-    
-    <!-- Phone -->
-    <a href="tel:+919359070217" class="icon-btn" title="Call Me">
-      <i class="fas fa-phone"></i>
-    </a>
-
-    <!-- Email -->
-    <a href="mailto:prasadsb2002@gmail.com" class="icon-btn" title="Email Me">
-      <i class="fas fa-envelope"></i>
-    </a>
-
-   <!-- LINKEDIN ICON (SMART + APP FALLBACK) -->
-<a href="https://linkedin.com/in/prasad-bhoite-a38a64223"
-   onclick="
-   const appLink = 'linkedin://in/prasad-bhoite-a38a64223';
-   const webLink = 'https://linkedin.com/in/prasad-bhoite-a38a64223';
-   let opened = false;
-
-   // Try to open LinkedIn app
-   window.location = appLink;
-
-   // If app not installed, open browser after 1 second
-   setTimeout(() => {
-     if (!opened) {
-       window.open(webLink, '_blank');
-     }
-   }, 1000);
-
-   // Detect if app successfully opened
-   window.onblur = () => { opened = true; };
-
-   return false;
-   "
-   class="icon-btn"
-   title="Connect on LinkedIn">
-  <i class="fab fa-linkedin"></i>
-</a>
-
-    <!-- GitHub -->
-    <a href="https://github.com/Prasad-Bhoite19" target="_blank" class="icon-btn" title="GitHub">
-      <i class="fab fa-github"></i>
-    </a>
-
-    <!-- Portfolio -->
-    <a href="https://prasad-bhoite19.github.io/prasad-portfolio/" target="_blank" class="icon-btn" title="Portfolio">
-      <i class="fas fa-globe"></i>
-    </a>
-  </div>
-</section>
-
+  <!-- ===== Contact Form Section ===== -->
   <section id="contact" class="contact-section fade-in">
     <h2>Contact Me</h2>
     <p>Have a question or want to work together? Send me a message below 👇</p>
@@ -212,29 +118,6 @@
   </footer>
 
   <!-- ===== Scripts ===== -->
-  <script>
-    // Smooth scroll for side-nav links
-    document.querySelectorAll('.side-nav a').forEach(link => {
-      link.addEventListener('click', function(e) {
-        e.preventDefault();
-        const targetId = this.getAttribute('href').substring(1);
-        const targetSection = document.getElementById(targetId);
-        targetSection.scrollIntoView({ behavior: 'smooth' });
-      });
-    });
-
-    // Fade-in animation on scroll
-    const faders = document.querySelectorAll('.fade-in');
-    const appearOptions = { threshold: 0.2 };
-    const appearOnScroll = new IntersectionObserver((entries, observer) => {
-      entries.forEach(entry => {
-        if(!entry.isIntersecting) return;
-        entry.target.classList.add('visible');
-        observer.unobserve(entry.target);
-      });
-    }, appearOptions);
-    faders.forEach(fader => appearOnScroll.observe(fader));
-  </script>
   <script src="script.js"></script>
 </body>
 </html>
