--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
   <title>Prasad Bhoite | Cloud & DevOps Engineer</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <!-- ✅ Added Font Awesome CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-  <!-- ===== Header Section ===== -->
+  <!-- ===== Hero Section ===== -->
   <header class="hero fade-in">
     <div class="overlay"></div>
     <div class="hero-content">
