--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
   </header>
 
-  <!-- ===== Top Right Horizontal Navigation Bar ===== -->
+  <!-- ===== Top Right Horizontal Navigation Bar (Desktop Only) ===== -->
   <nav class="top-nav">
     <ul>
       <li><a href="#about">About Me</a></li>
@@ -80,7 +80,7 @@
     <a href="resume.pdf" class="btn" target="_blank">Download Resume</a>
   </section>
 
-  <!-- ===== Connect Section (Icons Added) ===== -->
+  <!-- ===== Connect Section ===== -->
   <section id="contact-links" style="background-color:black; padding:60px 20px; text-align:center; border-radius:20px; margin-top:40px;">
     <h2 style="color:gold; font-size:32px; margin-bottom:25px;">✨ Connect with Me</h2>
     <p style="color:gold; font-size:18px; margin-bottom:40px;">Tap an icon below to connect instantly!</p>
@@ -116,7 +116,6 @@
     <p>© 2025 Prasad Bhoite. All rights reserved.</p>
   </footer>
 
-  <!-- ===== Scripts ===== -->
   <script src="script.js"></script>
 </body>
 </html>
