--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+Html code :-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,34 +7,31 @@
   <title>Prasad Bhoite | Cloud & DevOps Engineer</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-  <!-- ===== Hero Section ===== -->
-  <header class="hero fade-in">
+  <!-- ===== Header Section ===== -->
+  <header class="hero">
     <div class="overlay"></div>
     <div class="hero-content">
       <img src="myphoto1.jpg" alt="Prasad Bhoite" class="profile-photo">
       <h1>Hello, I'm <span>Prasad Bhoite</span></h1>
       <p class="tagline">Cloud & DevOps Engineer | AWS | Linux | Docker | Python</p>
-      <a href="#contact" class="btn btn-hero">Hire Me</a>
+      <a href="#contact" class="btn">Hire Me</a>
     </div>
   </header>
-
-  <!-- ===== Top Right Horizontal Navigation Bar (Desktop Only) ===== -->
-  <nav class="top-nav">
-    <ul>
-      <li><a href="#about">About Me</a></li>
-      <li><a href="#education">Education</a></li>
-      <li><a href="#skills">My Skills</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#resume">Resume</a></li>
-      <li><a href="#contact-links">Connect</a></li>
-    </ul>
-  </nav>
-
-  <!-- ===== About Section ===== -->
-  <section id="about" class="section about fade-in">
+<!-- ===== Right Side Vertical Navigation Bar ===== -->
+<nav class="side-nav">
+  <ul>
+    <li><a href="#about">About Me</a></li>
+    <li><a href="#education">Education</a></li>
+    <li><a href="#skills">My Skills</a></li>
+    <li><a href="#projects">Projects</a></li>
+    <li><a href="#resume">Resume</a></li>
+    <li><a href="#contact">Connect with Me</a></li>
+  </ul>
+</nav>
+   <!-- ===== About Section ===== -->
+  <section id="about" class="section about">
     <h2>About Me</h2>
     <p>
       I am a passionate Cloud & DevOps Engineer focused on creating scalable, automated, and reliable infrastructures.
@@ -41,75 +39,146 @@
       I am a quick learner, team player, and always eager to explore new technologies.
     </p>
   </section>
+  
+  <!-- Font Awesome CDN -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 
-  <!-- ===== Education Section ===== -->
-  <section id="education" class="section education fade-in" style="text-align: center;">
-    <h2>Education</h2>
-    <p>
-      <strong>Bachelor of Science (B.Sc) in Computer Science</strong><br>
-      Shivaji University, Kolhapur<br>
-      Passing Year: 2025<br>
-      CGPA: 7.5 / 10
-    </p>
-  </section>
+<!-- ===== Education Section ===== -->
+<section id="education" class="section education" style="text-align: center;">
+  <h2>Education</h2>
+  <p>
+    <strong>Bachelor of Science (B.Sc) in Computer Science</strong><br>
+    Shivaji University, Kolhapur<br>
+    Passing Year: 2025<br>
+    CGPA: 7.5 / 10
+  </p>
+</section>
 
+<!-- Font Awesome CDN -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+ 
   <!-- ===== Skills Section ===== -->
-  <section id="skills" class="section skills fade-in">
+  <section id="skills" class="section skills">
     <h2>My Skills</h2>
-    <div class="skill"><p>AWS</p><div class="skill-bar"><span style="width: 90%;"></span></div></div>
-    <div class="skill"><p>Linux</p><div class="skill-bar"><span style="width: 85%;"></span></div></div>
-    <div class="skill"><p>Docker</p><div class="skill-bar"><span style="width: 80%;"></span></div></div>
-    <div class="skill"><p>DevOps & CI/CD</p><div class="skill-bar"><span style="width: 75%;"></span></div></div>
-    <div class="skill"><p>Python</p><div class="skill-bar"><span style="width: 70%;"></span></div></div>
+    <div class="skill">
+      <p>AWS</p><div class="skill-bar"><span style="width: 90%;"></span></div>
+    </div>
+    <div class="skill">
+      <p>Linux</p><div class="skill-bar"><span style="width: 85%;"></span></div>
+    </div>
+    <div class="skill">
+      <p>Docker</p><div class="skill-bar"><span style="width: 80%;"></span></div>
+    </div>
+    <div class="skill">
+      <p>DevOps & CI/CD</p><div class="skill-bar"><span style="width: 75%;"></span></div>
+    </div>
+    <div class="skill">
+      <p>Python</p><div class="skill-bar"><span style="width: 70%;"></span></div>
+    </div>
   </section>
 
   <!-- ===== Projects Section ===== -->
-  <section id="projects" class="section projects fade-in">
+  <section id="projects" class="section projects">
     <h2>Projects</h2>
     <div class="project-container">
-      <div class="project"><h3>Bus Booking App</h3><p>Flask + MySQL web application for ticket booking and route management.</p></div>
-      <div class="project"><h3>Cloud Deployment Automation</h3><p>Created automated EC2 instance deployment using AWS CLI and shell scripting.</p></div>
-      <div class="project"><h3>CI/CD Pipeline Setup</h3><p>Built Jenkins pipeline integrating GitHub, Docker, and AWS for continuous delivery.</p></div>
+      <div class="project">
+        <h3>Bus Booking App</h3>
+        <p>Flask + MySQL web application for ticket booking and route management.</p>
+      </div>
+      <div class="project">
+        <h3>Cloud Deployment Automation</h3>
+        <p>Created automated EC2 instance deployment using AWS CLI and shell scripting.</p>
+      </div>
+      <div class="project">
+        <h3>CI/CD Pipeline Setup</h3>
+        <p>Built Jenkins pipeline integrating GitHub, Docker, and AWS for continuous delivery.</p>
+      </div>
     </div>
   </section>
 
   <!-- ===== Resume Section ===== -->
-  <section id="resume" class="section resume fade-in">
+  <section id="resume" class="section resume">
     <h2>Resume</h2>
     <p>You can view or download my latest resume for detailed experience and education.</p>
     <a href="resume.pdf" class="btn" target="_blank">Download Resume</a>
   </section>
 
-  <!-- ===== Connect Section ===== -->
-  <section id="contact-links" style="background-color:black; padding:60px 20px; text-align:center; border-radius:20px; margin-top:40px;">
-    <h2 style="color:gold; font-size:32px; margin-bottom:25px;">✨ Connect with Me</h2>
-    <p style="color:gold; font-size:18px; margin-bottom:40px;">Tap an icon below to connect instantly!</p>
+ <!-- ===== Contact Section ===== -->
+<!-- MODERN CONTACT ICONS SECTION -->
+<section id="contact-links" style="background-color:black; padding:60px 20px; text-align:center; border-radius:20px; margin-top:40px;">
 
-    <div class="icons-container" style="display:flex; justify-content:center; gap:35px; flex-wrap:wrap;">
-      <a href="tel:+919359070217" class="icon-btn" title="Call Me"><i class="fa-solid fa-phone"></i></a>
-      <a href="mailto:prasadsb2002@gmail.com" class="icon-btn" title="Email Me"><i class="fa-solid fa-envelope"></i></a>
-      <a href="https://linkedin.com/in/prasad-bhoite-a38a64223" target="_blank" class="icon-btn" title="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
-      <a href="https://github.com/Prasad-Bhoite19" target="_blank" class="icon-btn" title="GitHub"><i class="fa-brands fa-github"></i></a>
-      <a href="https://prasad-bhoite19.github.io/prasad-portfolio/" target="_blank" class="icon-btn" title="Portfolio"><i class="fa-solid fa-globe"></i></a>
-    </div>
-  </section>
+  <h2 style="color:gold; font-size:32px; margin-bottom:25px;">✨ Connect with Me</h2>
+  <p style="color:gold; font-size:18px; margin-bottom:40px;">Tap an icon below to connect instantly!</p>
 
-  <!-- ===== Contact Form Section ===== -->
-  <section id="contact" class="contact-section fade-in">
-    <h2>Contact Me</h2>
-    <p>Have a question or want to work together? Send me a message below 👇</p>
-    <div class="form-wrapper">
-      <form id="contactForm" action="https://formspree.io/f/xanpblve" method="POST" class="contact-form">
-        <input type="text" name="name" placeholder="Your Name" required>
-        <input type="email" name="_replyto" placeholder="Your Email" required>
-        <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
-        <button type="submit">Send Message</button>
-      </form>
-      <p id="successMessage" class="note" style="display:none; color:#d4af37; margin-top:15px;">
-        ✅ Your message has been sent. I’ll get back to you soon!
-      </p>
-    </div>
-  </section>
+  <div class="icons-container" style="display:flex; justify-content:center; gap:35px; flex-wrap:wrap;">
+    
+    <!-- Phone -->
+    <a href="tel:+919359070217" class="icon-btn" title="Call Me">
+      <i class="fas fa-phone"></i>
+    </a>
+
+    <!-- Email -->
+    <a href="mailto:prasadsb2002@gmail.com" class="icon-btn" title="Email Me">
+      <i class="fas fa-envelope"></i>
+    </a>
+
+   <!-- LINKEDIN ICON (SMART + APP FALLBACK) -->
+<a href="https://linkedin.com/in/prasad-bhoite-a38a64223"
+   onclick="
+   const appLink = 'linkedin://in/prasad-bhoite-a38a64223';
+   const webLink = 'https://linkedin.com/in/prasad-bhoite-a38a64223';
+   let opened = false;
+
+   // Try to open LinkedIn app
+   window.location = appLink;
+
+   // If app not installed, open browser after 1 second
+   setTimeout(() => {
+     if (!opened) {
+       window.open(webLink, '_blank');
+     }
+   }, 1000);
+
+   // Detect if app successfully opened
+   window.onblur = () => { opened = true; };
+
+   return false;
+   "
+   class="icon-btn"
+   title="Connect on LinkedIn">
+  <i class="fab fa-linkedin"></i>
+</a>
+
+    <!-- GitHub -->
+    <a href="https://github.com/Prasad-Bhoite19" target="_blank" class="icon-btn" title="GitHub">
+      <i class="fab fa-github"></i>
+    </a>
+
+    <!-- Portfolio -->
+    <a href="https://prasad-bhoite19.github.io/prasad-portfolio/" target="_blank" class="icon-btn" title="Portfolio">
+      <i class="fas fa-globe"></i>
+    </a>
+  </div>
+</section>
+
+<section id="contact" class="contact-section">
+  <h2>Contact Me</h2>
+  <p>Have a question or want to work together? Send me a message below 👇</p>
+
+  <div class="form-wrapper">
+    <form id="contactForm" action="https://formspree.io/f/xanpblve" method="POST" class="contact-form">
+      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="email" name="_replyto" placeholder="Your Email" required>
+      <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
+      <button type="submit">Send Message</button>
+    </form>
+
+    <!-- Success message placeholder -->
+    <p id="successMessage" class="note" style="display:none; color:#d4af37; margin-top:15px;">
+      ✅ Your message has been sent. I’ll get back to you soon!
+    </p>
+  </div>
+</section>
 
   <!-- ===== Footer ===== -->
   <footer>
@@ -119,3 +188,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
+
