--- a/index.html
+++ b/index.html
@@ -18,17 +18,23 @@
       <a href="#contact" class="btn">Hire Me</a>
     </div>
   </header>
-<!-- ===== Right Side Vertical Navigation Bar ===== -->
-<nav class="side-nav">
-  <ul>
-    <li><a href="#about">About Me</a></li>
-    <li><a href="#education">Education</a></li>
-    <li><a href="#skills">My Skills</a></li>
-    <li><a href="#projects">Projects</a></li>
-    <li><a href="#resume">Resume</a></li>
-    <li><a href="#contact">Connect with Me</a></li>
-  </ul>
-</nav>
+ <!-- Paste navbar here -->
+  <nav id="navbar">
+    <ul class="nav-list">
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <!-- Your existing sections -->
+  <section id="home"><h1>Home Section</h1></section>
+  <section id="about"><h1>About Section</h1></section>
+  <section id="skills"><h1>Skills Section</h1></section>
+  <section id="projects"><h1>Projects Section</h1></section>
+  <section id="contact"><h1>Contact Section</h1></section>
    <!-- ===== About Section ===== -->
   <section id="about" class="section about">
     <h2>About Me</h2>
