--- a/index.html
+++ b/index.html
@@ -18,23 +18,24 @@
       <a href="#contact" class="btn">Hire Me</a>
     </div>
   </header>
- <!-- Paste navbar here -->
-  <nav id="navbar">
-    <ul class="nav-list">
-      <li><a href="#home">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
+ <nav id="navbar">
+  <ul class="nav-list">
+    <li><a href="#home" class="nav-btn">Home</a></li>
+    <li><a href="#about" class="nav-btn">About Me</a></li>
+    <li><a href="#skills" class="nav-btn">Skills</a></li>
+    <li><a href="#resume" class="nav-btn">resume</a></li>
+    <li><a href="#contact" class="nav-btn">Contact-links</a></li>
+  </ul>
+</nav>
 
-  <!-- Your existing sections -->
-  <section id="home"><h1>Home Section</h1></section>
-  <section id="about"><h1>About Section</h1></section>
-  <section id="skills"><h1>Skills Section</h1></section>
-  <section id="projects"><h1>Projects Section</h1></section>
-  <section id="contact"><h1>Contact Section</h1></section>
+<section id="home"><h1>Home</h1></section>
+<section id="education"><h1>education</h1></section>
+<section id="about"><h1>About Me</h1></section>
+<section id="skills"><h1>Skills</h1></section>
+<section id="projects"><h1>Projects</h1></section>
+<section id="contact"><h1>Contact-links</h1></section>
+<section id="contact"><h1>Contact-links</h1></section>
+
    <!-- ===== About Section ===== -->
   <section id="about" class="section about">
     <h2>About Me</h2>
