--- a/index.html
+++ b/index.html
@@ -90,11 +90,9 @@
       </div>
       <div class="project">
          <h3>🌐 Three-Tier Web Application (AWS EC2 + RDS + PHP)</h3>
-  <p>Deployed a scalable 3-tier cloud architecture using <strong>AWS EC2 (Ubuntu)</strong> for web and application layers and <strong>RDS MySQL</strong> for the database tier. Implemented secure tier-to-tier communication, following AWS best practices for real-world deployments.</p>
+  <p>Deployed a scalable 3-tier cloud architecture using <strong>AWS EC2 (Ubuntu)</strong> for web and application layers and <strong>RDS MySQL</strong> for the database tier.</p>
   <ul>
-    <li>☁️ <strong>Architecture:</strong> Web Tier, App Tier, and Database Tier</li>
     <li>⚙️ <strong>Tech Stack:</strong> AWS EC2, RDS, PHP, MySQL, Nginx</li>
-    <li>🔒 <strong>Highlights:</strong> Secure, Scalable, Beginner-Friendly, Real-World Design</li>
   </ul>
   <a href="https://github.com/Prasad-bhoite19/aws-3tier-webapp" target="_blank" class="btn">🔗 View Project</a>
 </div>
