--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@
     <h2>Projects</h2>
     <div class="project-container">
       <div class="project">
-        <h3>Bus Booking App</h3>
-        <p>Flask + MySQL web application for ticket booking and route management.</p>
+        <h3>🚌 Bus Booking System (PHP + MySQL + AWS EC2)</h3>
+  <p>Built a dynamic bus reservation platform hosted on <strong>AWS EC2 (Ubuntu)</strong> using <strong>PHP</strong> and <strong>MySQL</strong>, enabling secure booking.</p>
+  <p>⚙️ <strong>Tech Stack:</strong> AWS EC2, PHP, MySQL, Nginx, HTML, CSS</p>
+  <a href="https://https://github.com/Prasad-bhoite19/Bus_Booking_App" target="_blank" class="btn">🔗 View Project</a>
       </div>
       <div class="project">
         <h3>Cloud Deployment Automation</h3>
