--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <h3>🚌 Bus Booking System (PHP + MySQL + AWS EC2)</h3>
   <p>Built a dynamic bus reservation platform hosted on <strong>AWS EC2 (Ubuntu)</strong> using <strong>PHP</strong> and <strong>MySQL</strong>, enabling secure booking.</p>
   <p>⚙️ <strong>Tech Stack:</strong> AWS EC2, PHP, MySQL, Nginx, HTML, CSS</p>
-  <a href="https://https://github.com/Prasad-bhoite19/Bus_Booking_App" target="_blank" class="btn">🔗 View Project</a>
+  <a href="https://github.com/Prasad-bhoite19/Bus_Booking_App" target="_blank" class="btn">🔗 View Project</a>
       </div>
       <div class="project">
         <h3>Cloud Deployment Automation</h3>
