--- a/index.html
+++ b/index.html
@@ -87,9 +87,14 @@
   <a href="https://github.com/Prasad-bhoite19/Bus_Booking_App" target="_blank" class="btn">🔗 View Project</a>
       </div>
       <div class="project">
-        <h3>Cloud Deployment Automation</h3>
-        <p>Created automated EC2 instance deployment using AWS CLI and shell scripting.</p>
-      </div>
+        <div class="project">
+  <h3>🌐 Database Migration: MySQL → Amazon RDS (via EC2)</h3>
+  <p>Migrated a MySQL database from an <strong>AWS EC2 instance</strong> to <strong>Amazon RDS (MySQL engine)</strong>, ensuring secure and efficient data transfer with proper security group configuration.</p>
+  <ul>
+    <li>⚙️ <strong>Tech Stack:</strong> AWS EC2, RDS, MySQL, Bash, AWS CLI</li>
+  </ul>
+  <a href="https://github.com/Prasad-bhoite19/MYSQL-TO-RDS-MIGRATION-USING-EC2" target="_blank" class="btn">🔗 View Project</a>
+</div>
       <div class="project">
          <h3>🌐 Three-Tier Web Application (AWS EC2 + RDS + PHP)</h3>
   <p>Deployed a scalable 3-tier cloud architecture using <strong>AWS EC2 (Ubuntu)</strong> for web and application layers and <strong>RDS MySQL</strong> for the database tier.</p>
