--- a/index.html
+++ b/index.html
@@ -103,7 +103,15 @@
   </ul>
   <a href="https://github.com/Prasad-bhoite19/aws-3tier-webapp" target="_blank" class="btn">🔗 View Project</a>
 </div>
-    </div>
+       <div class="project">
+         <h3>🌐 PHP Image Upload Project (Nginx + PHP 8.3 + RDS + S3)</h3>
+<p>Created a cloud-based image upload system using <strong>EC2</strong> with Nginx & PHP 8.3, storing images in <strong>Amazon S3</strong> and metadata in <strong>RDS MySQL</strong>.</p>
+<ul>
+  <li>⚙️ <strong>Tech Stack:</strong> EC2, S3, RDS, PHP 8.3, Nginx</li>
+</ul>
+    <a href="https://github.com/Prasad-bhoite19/PHP-Image-Upload-Project-with-Nginx" target="_blank" class="btn">🔗 View Project</a>     
+  </div>
+       </div>
   </section>
 
   <!-- ===== Resume Section ===== -->
