--- a/index.html
+++ b/index.html
@@ -109,8 +109,7 @@
 <ul>
   <li>⚙️ <strong>Tech Stack:</strong> EC2, S3, RDS, PHP 8.3, Nginx</li>
 </ul>
-    <a href="https://github.com/Prasad-bhoite19/PHP-Image-Upload-Project-with-Nginx" target="_blank" class="btn">🔗 View Project</a>     
-  </div>
+    <a href="https://github.com/Prasad-bhoite19/PHP-Image-Upload-Project-with-Nginx-PHP-8.3-RDS-Amazon-S3" target="_blank" class="btn">🔗 View Project</a>     
        </div>
   </section>
 
