--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
   <a href="https://github.com/Prasad-bhoite19/Bus_Booking_App" target="_blank" class="btn">🔗 View Project</a>
       </div>
       <div class="project">
-        <div class="project">
   <h3>🌐 Database Migration: MySQL → Amazon RDS (via EC2)</h3>
   <p>Migrated a MySQL database from an <strong>AWS EC2 instance</strong> to <strong>Amazon RDS (MySQL engine)</strong>, ensuring secure and efficient data transfer with proper security group configuration.</p>
   <ul>
@@ -110,6 +109,7 @@
   <li>⚙️ <strong>Tech Stack:</strong> EC2, S3, RDS, PHP 8.3, Nginx</li>
 </ul>
     <a href="https://github.com/Prasad-bhoite19/PHP-Image-Upload-Project-with-Nginx-PHP-8.3-RDS-Amazon-S3" target="_blank" class="btn">🔗 View Project</a>     
+   </div>   
        </div>
   </section>
 
