--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="hero-content">
       <img src="myphoto1.jpg" alt="Prasad Bhoite" class="profile-photo">
       <h1>Hello, I'm <span>Prasad Bhoite</span></h1>
-      <p class="tagline">Cloud & DevOps Engineer | AWS | Linux | Docker | Python</p>
+      <p class="tagline">Aspiring Cloud & DevOps Engineer | Pursuing AWS, Linux, Docker & Python</p>
       <a href="#contact" class="btn">Hire Me</a>
     </div>
   </header>
@@ -33,9 +33,10 @@
   <section id="about" class="section about">
     <h2>About Me</h2>
     <p>
-      I am a passionate Cloud & DevOps Engineer focused on creating scalable, automated, and reliable infrastructures.
-      I love working with AWS, Docker, and CI/CD tools to deliver optimized solutions. 
-      I am a quick learner, team player, and always eager to explore new technologies.
+      I am an aspiring Cloud & DevOps Engineer currently pursuing training in AWS, Linux, Docker, and CI/CD.
+      I recently completed my BSc in Computer Science and am actively looking for a Cloud or DevOps role. 
+      I enjoy building hands-on projects on AWS and continuously improving my skills to create scalable and reliable solutions. 
+      I am a fast learner, motivated, and ready to contribute to real-world cloud environments.
     </p>
   </section>
   
