--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <li><a href="#education">Education</a></li>
     <li><a href="#skills">Skills</a></li>
     <li><a href="#projects">Projects</a></li>
+    <li><a href="#certifications">Certifications</a></li>
     <li><a href="#resume">Resume</a></li>
     <li><a href="#contact">Contact</a></li>
   </ul>
@@ -113,6 +114,18 @@
    </div>   
        </div>
   </section>
+
+  <!-- ===== Achievements & Certifications Section ===== -->
+<section id="certifications" class="section certifications">
+  <h2>Achievements & Certifications</h2>
+  <p>Here are some of my key certifications related to Cloud, DevOps, and technology.</p>
+
+  <div class="cert-list">
+    <div class="cert-item">✔ Cloud and DevOps Certification – Fortune Cloud Technologies, Pune</div>
+    <div class="cert-item">✔ AWS Certified Developer - Associate – LinkedIn Learning</div>
+    <div class="cert-item">✔ Workloads and Machine Learning on Azure – LinkedIn Learning & Microsoft</div>
+  </div>
+</section>
 
   <!-- ===== Resume Section ===== -->
   <section id="resume" class="section resume">
