--- a/index.html
+++ b/index.html
@@ -121,9 +121,20 @@
   <p>Here are some of my key certifications related to Cloud, DevOps, and technology.</p>
 
   <div class="cert-list">
-    <div class="cert-item">✔ Cloud and DevOps Certification – Fortune Cloud Technologies, Pune</div>
-    <div class="cert-item">✔ AWS Certified Developer - Associate – LinkedIn Learning</div>
-    <div class="cert-item">✔ Workloads and Machine Learning on Azure – LinkedIn Learning & Microsoft</div>
+    <div class="cert-item">
+      <h3>Cloud and DevOps Certification</h3>
+      <p>Fortune Cloud Technologies, Pune</p>
+    </div>
+
+    <div class="cert-item">
+      <h3>AWS Certified Developer - Associate</h3>
+      <p>LinkedIn Learning</p>
+    </div>
+
+    <div class="cert-item">
+      <h3>Workloads and Machine Learning on Azure</h3>
+      <p>LinkedIn Learning & Microsoft</p>
+    </div>
   </div>
 </section>
 
