--- a/index.html
+++ b/index.html
@@ -127,9 +127,14 @@
     </div>
 
     <div class="cert-item">
-      <h3>AWS Certified Developer - Associate</h3>
-      <p>LinkedIn Learning</p>
-    </div>
+  <h3>
+    <a href="https://raw.githubusercontent.com/Prasad-bhoite19/prasad-portfolio/main/assets/certifications/CertificateOfCompletion_AWS%20Certified%20Developer%20%20Associate%20DVAC02%20Cert%20Prep.pdf" 
+       target="_blank">
+       AWS Certified Developer - Associate
+    </a>
+  </h3>
+  <p>LinkedIn Learning</p>
+</div>
 
     <div class="cert-item">
       <h3>Workloads and Machine Learning on Azure</h3>
