--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
       <p>Fortune Cloud Technologies, Pune</p>
     </div>
 
-    <div class="cert-item">
+  <div class="cert-item">
   <h3>
-    <a href="https://raw.githubusercontent.com/Prasad-bhoite19/prasad-portfolio/main/assets/certifications/CertificateOfCompletion_AWS%20Certified%20Developer%20%20Associate%20DVAC02%20Cert%20Prep.pdf" 
+    <a href="https://prasad-bhoite19.github.io/prasad-portfolio/assets/certifications/CertificateOfCompletion_AWS%20Certified%20Developer%20%20Associate%20DVAC02%20Cert%20Prep.pdf" 
        target="_blank">
        AWS Certified Developer - Associate
     </a>
