--- a/index.html
+++ b/index.html
@@ -120,11 +120,14 @@
   <h2>Achievements & Certifications</h2>
   <p>Here are some of my key certifications related to Cloud, DevOps, and technology.</p>
 
-  <div class="cert-list">
-    <div class="cert-item">
-      <h3>Cloud and DevOps Certification</h3>
-      <p>Fortune Cloud Technologies, Pune</p>
-    </div>
+  <div class="cert-item">
+  <h3>
+    <a href="#" onclick="alert('Currently Pursuing (Expected Completion Soon)'); return false;">
+      Cloud and DevOps Certification
+    </a>
+  </h3>
+  <p>Fortune Cloud Technologies, Pune</p>
+</div>
 
   <div class="cert-item">
   <h3>
@@ -136,11 +139,26 @@
   <p>LinkedIn Learning</p>
 </div>
 
+   <div class="cert-item">
+  <h3>
+    <a href="https://prasad-bhoite19.github.io/prasad-portfolio/assets/certifications/CertificateOfCompletion_Microsoft%20Azure%20AI%20Essentials%20Workloads%20and%20Machine%20Learning%20on%20Azure.pdf" 
+       target="_blank">
+       Workloads and Machine Learning on Azure
+    </a>
+  </h3>
+  <p>LinkedIn Learning & Microsoft</p>
+</div>
+
     <div class="cert-item">
-      <h3>Workloads and Machine Learning on Azure</h3>
-      <p>LinkedIn Learning & Microsoft</p>
-    </div>
-  </div>
+  <h3>
+    <a href="https://prasad-bhoite19.github.io/prasad-portfolio/assets/certifications/CertificateOfCompletion_Microsoft%20Azure%20AI%20Essentials%20Professional%20Certificate%20by%20Microsoft%20and%20LinkedIn.pdf" 
+       target="_blank">
+       Microsoft Azure AI Essentials
+    </a>
+  </h3>
+  <p>LinkedIn Learning & Microsoft</p>
+</div>
+
 </section>
 
   <!-- ===== Resume Section ===== -->
