--- a/index.html
+++ b/index.html
@@ -114,53 +114,54 @@
    </div>   
        </div>
   </section>
-
-  <!-- ===== Achievements & Certifications Section ===== -->
+<!-- ===== Achievements & Certifications Section ===== -->
 <section id="certifications" class="section certifications">
   <h2>Achievements & Certifications</h2>
   <p>Here are some of my key certifications related to Cloud, DevOps, and technology.</p>
 
-  <div class="cert-item">
-  <h3>
-    <a href="#" onclick="alert('Currently Pursuing (Expected Completion Soon)'); return false;">
-      Cloud and DevOps Certification
-    </a>
-  </h3>
-  <p>Fortune Cloud Technologies, Pune</p>
-</div>
-
-  <div class="cert-item">
-  <h3>
-    <a href="https://prasad-bhoite19.github.io/prasad-portfolio/assets/certifications/CertificateOfCompletion_AWS%20Certified%20Developer%20%20Associate%20DVAC02%20Cert%20Prep.pdf" 
-       target="_blank">
-       AWS Certified Developer - Associate
-    </a>
-  </h3>
-  <p>LinkedIn Learning</p>
-</div>
-
-   <div class="cert-item">
-  <h3>
-    <a href="https://prasad-bhoite19.github.io/prasad-portfolio/assets/certifications/CertificateOfCompletion_Microsoft%20Azure%20AI%20Essentials%20Workloads%20and%20Machine%20Learning%20on%20Azure.pdf" 
-       target="_blank">
-       Workloads and Machine Learning on Azure
-    </a>
-  </h3>
-  <p>LinkedIn Learning & Microsoft</p>
-</div>
+  <div class="cert-list"> <!-- Added this wrapper -->
 
     <div class="cert-item">
-  <h3>
-    <a href="https://prasad-bhoite19.github.io/prasad-portfolio/assets/certifications/CertificateOfCompletion_Microsoft%20Azure%20AI%20Essentials%20Professional%20Certificate%20by%20Microsoft%20and%20LinkedIn.pdf" 
-       target="_blank">
-       Microsoft Azure AI Essentials
-    </a>
-  </h3>
-  <p>LinkedIn Learning & Microsoft</p>
-</div>
+      <h3>
+        <a href="#" onclick="alert('Currently Pursuing (Expected Completion Soon)'); return false;">
+          Cloud and DevOps Certification
+        </a>
+      </h3>
+      <p>Fortune Cloud Technologies, Pune</p>
+    </div>
 
+    <div class="cert-item">
+      <h3>
+        <a href="https://prasad-bhoite19.github.io/prasad-portfolio/assets/certifications/CertificateOfCompletion_AWS%20Certified%20Developer%20%20Associate%20DVAC02%20Cert%20Prep.pdf" 
+           target="_blank">
+           AWS Certified Developer - Associate
+        </a>
+      </h3>
+      <p>LinkedIn Learning</p>
+    </div>
+
+    <div class="cert-item">
+      <h3>
+        <a href="https://prasad-bhoite19.github.io/prasad-portfolio/assets/certifications/CertificateOfCompletion_Microsoft%20Azure%20AI%20Essentials%20Workloads%20and%20Machine%20Learning%20on%20Azure.pdf" 
+           target="_blank">
+           Workloads and Machine Learning on Azure
+        </a>
+      </h3>
+      <p>LinkedIn Learning & Microsoft</p>
+    </div>
+
+    <div class="cert-item">
+      <h3>
+        <a href="https://prasad-bhoite19.github.io/prasad-portfolio/assets/certifications/CertificateOfCompletion_Microsoft%20Azure%20AI%20Essentials%20Professional%20Certificate%20by%20Microsoft%20and%20LinkedIn.pdf" 
+           target="_blank">
+           Microsoft Azure AI Essentials
+        </a>
+      </h3>
+      <p>LinkedIn Learning & Microsoft</p>
+    </div>
+
+  </div> <!-- /.cert-list -->
 </section>
-
   <!-- ===== Resume Section ===== -->
   <section id="resume" class="section resume">
     <h2>Resume</h2>
